--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "league/glide-laravel",
-    "description": "Glide adapter for Laravel",
+    "name": "gocustodia/glide-laravel",
+    "description": "Glide adapter for Laravel - Fork",
     "homepage": "http://glide.thephpleague.com",
     "license": "MIT",
     "authors" : [
@@ -8,14 +8,22 @@
             "name": "Jonathan Reinink",
             "email": "jonathan@reinink.ca",
             "homepage": "http://reinink.ca"
+        },
+        {
+            "name": "Custodia",
+            "email": "dev@custodia.com"
+        },
+        {
+          "name": "James",
+          "email": "jameskyurem@gmail.com"
         }
     ],
     "require": {
-        "league/glide-symfony": "^1.0"
+        "league/glide-symfony": "^2.0"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9",
-        "phpunit/phpunit": "^4.0"
+        "mockery/mockery": "^1.6",
+        "phpunit/phpunit": "^11.0"
     },
     "autoload": {
         "psr-4": {
